<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rbpodo_hardware</name>
  <version>0.0.1</version>
  <description>rbpodo_hardware</description>
  <maintainer email="support@rainbow-robotics.com">Rainbow Robotics</maintainer>
  <maintainer email="keunjun.choi@rainbow-robotics.com">Keunjun Choi</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rbpodo_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
